--- a/integrador_v0.1/pom.xml
+++ b/integrador_v0.1/pom.xml
@@ -59,6 +59,12 @@
 			<artifactId>log4j</artifactId>
 			<version>1.2.17</version>
 		</dependency>
+
+	<dependency>
+		<groupId>mysql</groupId>
+		<artifactId>mysql-connector-java</artifactId>
+		<scope>runtime</scope>
+	</dependency>
 	</dependencies>
 
 	<build>
