--- a/integrador_v0.1/src/main/resources/application.properties
+++ b/integrador_v0.1/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/db_prod
+spring.datasource.username=springuser
+spring.datasource.password=ThePassword
+spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
 
