--- a/integrador/package.json
+++ b/integrador/package.json
@@ -3,14 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@bcad1591/react-date-picker": "0.0.1",
+    "@material/textfield": "^14.0.0",
+    "@mui/x-date-pickers-pro": "^5.0.0-beta.4",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "date-fns": "^2.29.1",
     "react": "^18.2.0",
     "react-calendar": "^3.7.0",
+    "react-date-range": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.5",
+    "typeface-quicksand": "^1.1.13",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
