--- a/integrador_v0.1/src/main/resources/application.properties
+++ b/integrador_v0.1/src/main/resources/application.properties
@@ -1,6 +1,8 @@
+spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/db_prod
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/db_prod?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
+
 
