Añadí el Swagger al proyecto.

--- a/integrador_v0.1/pom.xml
+++ b/integrador_v0.1/pom.xml
@@ -78,6 +78,13 @@
 			<scope>provided</scope>
 		</dependency>
 
+		<!-- swagger -->
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-ui</artifactId>
+			<version>1.6.4</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
