--- a/integrador_v0.1/src/main/resources/application.properties
+++ b/integrador_v0.1/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=drop-create
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/db_prod?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=root
