--- a/integrador/package.json
+++ b/integrador/package.json
@@ -17,7 +17,8 @@
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.5",
     "typeface-quicksand": "^1.1.13",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "webkit-scrollbar-class": "^1.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
