--- a/integrador/package.json
+++ b/integrador/package.json
@@ -14,6 +14,7 @@
     "react-calendar": "^3.7.0",
     "react-date-range": "^1.4.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.5",
     "typeface-quicksand": "^1.1.13",
