--- a/integrador/package.json
+++ b/integrador/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "date-fns": "^2.29.1",
+    "keen-slider": "^6.7.0",
     "react": "^18.2.0",
     "react-calendar": "^3.7.0",
     "react-date-range": "^1.4.0",
