--- a/integrador/package.json
+++ b/integrador/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-scripts": "5.0.1",
+    "react-simple-star-rating": "^4.0.5",
     "styled-components": "^5.3.5",
     "typeface-quicksand": "^1.1.13",
     "web-vitals": "^2.1.4",
