--- a/integrador/package.json
+++ b/integrador/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@bcad1591/react-date-picker": "0.0.1",
+    "@googlemaps/react-wrapper": "^1.1.35",
     "@material/textfield": "^14.0.0",
     "@mui/x-date-pickers-pro": "^5.0.0-beta.4",
     "@testing-library/jest-dom": "^5.16.4",
