--- a/integrador_v0.1/src/main/resources/application.properties
+++ b/integrador_v0.1/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/db_prod?createDa
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
+spring.jackson.serialization.fail-on-empty-beans=false
