--- a/integrador/package.json
+++ b/integrador/package.json
@@ -18,6 +18,7 @@
     "react-date-range": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-simple-star-rating": "^4.0.5",
     "styled-components": "^5.3.5",
@@ -50,6 +51,7 @@
     ]
   },
   "devDependencies": {
-    "@iconify/react": "^3.2.2"
+    "@iconify/react": "^3.2.2",
+    "jest": "^28.1.3"
   }
 }
