--- a/integrador_v0.1/src/main/resources/application.properties
+++ b/integrador_v0.1/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 
-spring.datasource.url=jdbc:mysql://db.ctd.academy:3306/PI_GRUPO10
+spring.datasource.url=jdbc:mysql://db.ctd.academy:3306/PI_GRUPO10?createDatabaseIfNotExist=true
 
 spring.datasource.username = PI_GRUPO10
 spring.datasource.password = Thichei2
