--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,6 +3,7 @@ services:
 
 variables:
   MYSQL_DATABASE: PI_GRUPO10
+  MYSQL_USER: PI_GRUPO10
   MYSQL_ROOT_PASSWORD: Thichei2
   MYSQL_HOST: db.ctd.academy:3306
   MAVEN_OPTS: -Dmaven.repo.local=.m2/repository
@@ -11,7 +12,7 @@ variables:
 connect:
   image: mysql
   script: 
-  - echo "SELECT 'OK';" | mysql --user=PI_GRUPO10 --password="$MYSQL_ROOT_PASSWORD" --host=mysql "$MYSQL_DATABASE"
+  - echo "SELECT 'OK';" | mysql --user="$MYSQL_USER" --password="$MYSQL_ROOT_PASSWORD" --host=mysql "$MYSQL_DATABASE"
 
 image: maven:latest
 
