--- a/integrador_v0.1/src/main/resources/application.properties
+++ b/integrador_v0.1/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.url=jdbc:mysql://db.ctd.academy:3306/PI_GRUPO10?createDatabase
 spring.datasource.username=PI_GRUPO10
 spring.datasource.password=Thichei2
 spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
+spring.jackson.serialization.fail-on-empty-beans=false
