--- a/integrador_v0.1/src/main/resources/application.properties
+++ b/integrador_v0.1/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
 spring.jackson.serialization.fail-on-empty-beans=false
+logging.level.org.hibernate.SQL=debug
