security con errores

--- a/integrador_v0.1/src/main/resources/application.properties
+++ b/integrador_v0.1/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.datasource.password=root
 spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
 spring.jackson.serialization.fail-on-empty-beans=false
 
+# security
+jwt.secret= secret
+jwt.expiration=3600
