--- a/integrador/package.json
+++ b/integrador/package.json
@@ -19,8 +19,9 @@
     "react-date-range": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-moment": "^1.1.2",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "^5.0.1",
     "react-simple-star-rating": "^4.0.5",
     "styled-components": "^5.3.5",
     "typeface-quicksand": "^1.1.13",
