--- a/integrador/package.json
+++ b/integrador/package.json
@@ -14,6 +14,7 @@
     "date-fns": "^2.29.1",
     "keen-slider": "^6.7.0",
     "react": "^18.2.0",
+    "react-bootstrap-form": "^0.1.4-beta6",
     "react-bootstrap-time-picker": "^2.0.1",
     "react-calendar": "^3.7.0",
     "react-date-range": "^1.4.0",
