--- a/integrador/package.json
+++ b/integrador/package.json
@@ -4,23 +4,33 @@
   "private": true,
   "dependencies": {
     "@bcad1591/react-date-picker": "0.0.1",
+    "@date-io/date-fns": "^2.15.0",
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
     "@googlemaps/react-wrapper": "^1.1.35",
     "@material/textfield": "^14.0.0",
+    "@mui/lab": "^5.0.0-alpha.98",
+    "@mui/material": "^5.10.4",
     "@mui/x-date-pickers-pro": "^5.0.0-beta.4",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "babel-jest": "^29.0.2",
+    "bootstrap": "^5.2.0",
     "browser-router": "^0.2.0",
-    "date-fns": "^2.29.1",
+    "date-fns": "^2.29.2",
+    "form-control-react": "^1.0.9",
     "keen-slider": "^6.7.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.5.0",
+    "react-bootstrap-form": "^0.1.4-beta6",
     "react-bootstrap-time-picker": "^2.0.1",
     "react-calendar": "^3.7.0",
     "react-date-range": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "^5.0.1",
     "react-simple-star-rating": "^4.0.5",
     "styled-components": "^5.3.5",
     "typeface-quicksand": "^1.1.13",
@@ -52,6 +62,8 @@
     ]
   },
   "devDependencies": {
-    "@iconify/react": "^3.2.2"
+    "@iconify/react": "^3.2.2",
+    "@types/bootstrap": "^5.2.3",
+    "@types/react-bootstrap": "^0.32.30"
   }
 }
