--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -58,7 +58,7 @@ deploy_job:
     - echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config 
     - ssh-keyscan -H $DEPLOY_NEW_CLOUD >> ~/.ssh/known_hosts 
   script: 
-    - ssh ubuntu@$DEPLOY_NEW_CLOUD "sudo apt install default-jdk -y"
+    - ssh ubuntu@$DEPLOY_NEW_CLOUD "sudo apt install openjdk-8-jdk -y"
     - ssh ubuntu@$DEPLOY_NEW_CLOUD "sudo systemctl stop ubicarapp.service" 
     - scp ./integrador_v0.1/target/integrador_v0.1-0.0.1-SNAPSHOT.jar ubuntu@$DEPLOY_NEW_CLOUD:~/ubicar-app/ 
     - ssh ubuntu@$DEPLOY_NEW_CLOUD "sudo systemctl start ubicarapp.service"
