--- a/integrador/package.json
+++ b/integrador/package.json
@@ -15,10 +15,10 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "babel-jest": "^23.6.0",
     "bootstrap": "^5.2.0",
     "browser-router": "^0.2.0",
     "date-fns": "^2.29.2",
+    "formik": "^2.2.9",
     "keen-slider": "^6.7.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
@@ -30,12 +30,13 @@
     "react-icons": "^4.4.0",
     "react-moment": "^1.1.2",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "^5.0.1",
     "react-simple-star-rating": "^4.0.5",
     "styled-components": "^5.3.5",
     "typeface-quicksand": "^1.1.13",
     "web-vitals": "^2.1.4",
-    "webkit-scrollbar-class": "^1.0.0"
+    "webkit-scrollbar-class": "^1.0.0",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
