--- a/integrador/package.json
+++ b/integrador/package.json
@@ -20,6 +20,7 @@
     "date-fns": "^2.29.2",
     "formik": "^2.2.9",
     "keen-slider": "^6.7.0",
+    "local-storage-helper": "^1.2.5",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-bootstrap-form": "^0.1.4-beta6",
