--- a/integrador_v0.1/pom.xml
+++ b/integrador_v0.1/pom.xml
@@ -102,6 +102,11 @@
 			<artifactId>modelmapper</artifactId>
 			<version>3.1.0</version>
 		</dependency>
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<version>2.1.212</version>
+		</dependency>
 
 
 
