--- a/integrador_v0.1/pom.xml
+++ b/integrador_v0.1/pom.xml
@@ -102,6 +102,11 @@
 			<artifactId>modelmapper</artifactId>
 			<version>3.1.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+			<version>2.7.3</version>
+		</dependency>
 
 
 
