--- a/integrador_v0.1/src/main/resources/application.properties
+++ b/integrador_v0.1/src/main/resources/application.properties
@@ -15,8 +15,8 @@ jwt.expiration=3600
 spring.mail.host = smtp.gmail.com
 spring.mail.port = 587
 spring.mail.properties.mail.smtp.starttls.enable = true
-spring.mail.username = <ubicar.digital@gmail.com>
-spring.mail.password = <ubicar2022>
+spring.mail.username = ubicar.digital@gmail.com
+spring.mail.password = nnsqsqfirevynqmw
 spring.mail.properties.mail.smtp.starttls.required = true
 spring.mail.properties.mail.transport.protocol = smtp
 spring.mail.properties.mail.smtp.auth = true
@@ -24,4 +24,4 @@ spring.mail.properties.starttls.enable = true
 spring.mail.properties.mail.smtp.connectiontimeout = 5000
 spring.mail.properties.mail.smtp.timeout = 5000
 spring.mail.properties.mail.smtp.writetimeout = 5000
-spring.mail.from.email=<ubicar.digital@gmail.com>
+spring.mail.from.email= ubicar.digital@gmail.com
