--- a/integrador/package.json
+++ b/integrador/package.json
@@ -21,6 +21,7 @@
     "formik": "^2.2.9",
     "keen-slider": "^6.7.0",
     "local-storage-helper": "^1.2.5",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-bootstrap-form": "^0.1.4-beta6",
@@ -32,7 +33,6 @@
     "react-icons": "^4.4.0",
     "react-loading-skeleton": "^3.1.0",
     "react-moment": "^1.1.2",
-    
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "react-simple-star-rating": "^4.0.5",
