--- a/integrador_v0.1/src/main/resources/application.properties
+++ b/integrador_v0.1/src/main/resources/application.properties
@@ -25,3 +25,7 @@ spring.mail.properties.mail.smtp.connectiontimeout = 5000
 spring.mail.properties.mail.smtp.timeout = 5000
 spring.mail.properties.mail.smtp.writetimeout = 5000
 spring.mail.from.email= ubicar.digital@gmail.com
+
+# swagger
+springdoc.swagger-ui.configUrl=/swagger-config.json
+springdoc.cache.disabled= true
